force-app/main/default/objects/Daily_Log__c/Daily_Log__c.object-meta.xml
<CustomObject>
    <label>Daily Log</label>
    <nameField>
        <label>Food Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>