force-app/main/default/objects/Daily_Log__c/fields/Target_Calories__c.field-meta.xml
<CustomField>
    <fullName>Target_Calories__c</fullName>
    <label>Target Calories</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>