force-app/main/default/objects/Daily_Log__c/fields/Total_Calories__c.field-meta.xml
<CustomField>
    <fullName>Total_Calories__c</fullName>
    <label>Total Calories</label>
    <summarizedField>Log_Entry__c.Calculated_Calories__c</summarizedField>
    <summaryForeignKey>Log_Entry__c.Daily_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>