force-app/main/default/objects/Daily_Log__c/fields/Total_Carbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Carbs__c</fullName>
    <label>Total Carbs</label>
    <summarizedField>Log_Entry__c.Calculated_Carbs__c</summarizedField>
    <summaryForeignKey>Log_Entry__c.Daily_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>