force-app/main/default/objects/Daily_Log__c/fields/Total_Protein__c.field-meta.xml
<CustomField>
    <fullName>Total_Protein__c</fullName>
    <label>Total Protein</label>
    <summarizedField>Log_Entry__c.Calculated_Protein__c</summarizedField>
    <summaryForeignKey>Log_Entry__c.Daily_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>